notebook: fix upload image twice bug by drag and drop upload notebook: set snapshot div visible only when taking snapshot

--- a/apps/notebook/css/note-editor.css
+++ b/apps/notebook/css/note-editor.css
@@ -30,6 +30,7 @@
 
 #note-snapshot {
     z-index: -9999;
+    opacity: 0;
     position: absolute;
     top: 0px;
     left: 0px;
